# humanDetectionFromDepthData

./: CMakeLists.txt  README.md
src/: DatasetCreator.cpp  DatasetCreatorDrag.cpp  DatasetCreatorDrag.cpp~  blockVizualization.cpp  compute_histogram.cpp  descriptor.cpp  featExtractor.cpp  hog2.cpp  listFiles.cpp  retrieveMatrix.cpp  retrieveMatrix.cpp~  slideWindow.cpp  viewDepthFrame.cpp
